fix: Implement date-based condition validation for alternate requirements
- Created DateConditionEvaluator component for date condition parsing
- Fixed medical exemption handling for patients with no immunizations
- Added comprehensive test suite (12 tests, 100% passing)
- Resolves critical bug where 4th DTaP dose before 4th birthday incorrectly passed

BREAKING CHANGES: None - fully backward compatible

Test Results: 12/12 tests passing (100%)
Files Changed: +618 lines (DateConditionEvaluator, ValidationService, Tests)